update nav title

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header hidden-xs">
-          <a class="navbar-brand" href="{{ url_for('index') }}">Wiki</a>
+          <a class="navbar-brand" href="{{ url_for('index') }}">Open Savannah Wiki</a>
         </div>
         <div class="pull-right">
           <form class="navbar-form" action="/" method="GET" role="search" style="border: 0;">
